--- a/BlazorProject.Presentation/Components/Pages/Items/Items.razor
+++ b/BlazorProject.Presentation/Components/Pages/Items/Items.razor
@@ -33,7 +33,7 @@
     </tbody>
 </table>
 @code {
-    private List<ItemDto> items = new();
+    private List<CustomerDto> items = new();
     private bool isAddingItem = false;
 
     protected override async Task OnInitializedAsync()
