Added Invoice Type to the database

--- a/BlazorClient/Components/CustomSelectInput.razor
+++ b/BlazorClient/Components/CustomSelectInput.razor
@@ -1,6 +1,6 @@
 ﻿@typeparam TValue
 
-<select @onchange="OnValueChanged" class="form-control">
+<select @onchange="OnValueChanged" class="form-control  border border-1 border-dark">
     @ChildContent
 </select>
 
