--- a/BlazorClient/Components/InvoiceItemComponent.razor
+++ b/BlazorClient/Components/InvoiceItemComponent.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="card mb-3">
+<div class="card mb-3 border border-dark border-3">
     <div class="card-body bg-dark text-light rounded rounded-3">
         <div class="row g-3">
             <div class="col-md-6">    
@@ -26,7 +26,7 @@
                 <InputNumber id="amountSold" class="form-control" @bind-Value="Item.Amount" @oninput="RecalculateItemTotal" />
             </div>
             <div class="col-md-2">
-                <div class="text-center rounded rounded-3 mt-3 border border-3 border-primary">
+                <div class="text-center rounded rounded-3 mt-3 border border-3 border-warning">
                     <h6 class="mt-4">Total: @Item.Total</h6>
                 </div>
             </div>
@@ -34,14 +34,14 @@
         </div>
         <div class="mt-3">
             <h5>Taxes</h5>
-            <button type="button" class="btn btn-secondary" @onclick="AddNewTax">Add Tax</button>
+            <button type="button" class="btn btn-light" @onclick="AddNewTax">Add Tax</button>
 
             @for (int i = 0; i < Item.Taxes.Count; i++)
             {
                 <InvoiceTaxComponent @bind-Tax="Item.Taxes[i]" TaxList="TaxList" OnRemove="RemoveTax"></InvoiceTaxComponent>
             }
             <div class="d-flex justify-content-center align-items-center">
-                <div class="text-center rounded rounded-3 w-25 m-2 border border-3 border-success">
+                <div class="text-center rounded rounded-3 w-25 m-2 border border-3 border-warning">
                     <h6 class="mt-4">Net Amount: @Item.NetAmount</h6>
                 </div>
             </div>
