--- a/BlazorClient/Pages/Items/Items.razor
+++ b/BlazorClient/Pages/Items/Items.razor
@@ -2,7 +2,7 @@
 @inject ItemService ItemService
 @inject NavigationManager Navigation
 
-
+<PageTitle>Items</PageTitle>
 <h3>Items</h3>
 
 <a href="/items/add" class="btn btn-primary mb-2">Add New Item</a>
