--- a/BlazorClient/Pages/Customers/Customers.razor
+++ b/BlazorClient/Pages/Customers/Customers.razor
@@ -2,7 +2,7 @@
 @inject CustomerService CustomerService
 @inject NavigationManager Navigation
 
-
+<PageTitle>Customers</PageTitle>
 <h3>Customers</h3>
 
 <a href="/customers/add" class="btn btn-primary">Add New Customer</a>
@@ -35,7 +35,7 @@ else
                         <td>@customer.Name</td>
                         <td>@customer.Code</td>
                         <td>
-                            <a href="/items/edit/@customer.Id" class="btn btn-outline-dark btn-sm">
+                            <a href="/customers/edit/@customer.Id" class="btn btn-outline-dark btn-sm">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
                             <a @onclick="async () => await DeleteCustomer(customer.Id)" class="btn btn-outline-danger btn-sm">
